@@ -41,9 +41,10 @@
 	</distributionManagement>
 
 	<properties>
-		<java.version>10</java.version>
+		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
+		<openjfx-version>11.0.2</openjfx-version>
 	</properties>
 	<build>
 		<plugins>
@@ -71,10 +72,10 @@
 				<version>3.7.0</version>
 				<configuration>
 					<release>${java.version}</release>
-					<compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>javafx.graphics,jdk.incubator.httpclient</arg>
-					</compilerArgs>
+<!-- 					<compilerArgs> -->
+<!-- 						<arg>- -add-modules</arg> -->
+<!-- 						<arg>javafx.graphics,javafx.fxml,javafx.controls,jdk.incubator.httpclient</arg> -->
+<!-- 					</compilerArgs> -->
 				</configuration>
 			</plugin>
 		</plugins>
@@ -145,6 +146,21 @@
 				<groupId>com.helger</groupId>
 				<artifactId>jcodemodel</artifactId>
 				<version>3.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-graphics</artifactId>
+				<version>${openjfx-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-controls</artifactId>
+				<version>${openjfx-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-fxml</artifactId>
+				<version>${openjfx-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
